--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
     <head>
         <title>My Webpage</title>
     </head>
-    <body>
-        Hello, world!
+      <body>
+        <form>
+          <textarea id="message" rows="10" cols="30" placeholder="comment"></textarea>
+          <br>
+          <button type="button" onclick="newComment()" name="submit">Submit
+          </button>
+        </form>
+          <div>
+            <ul id="comments"><ul>
+          </div>
+      <script src="./script.js"></script>
     </body>
 </html>
